<resources>
    <string name="app_name">Personal Dictionary</string>
    <string name="type">Noun</string>
    <string name="sample_word">Vulnerability</string>
    <string name="login">Login</string>
    <string name="password_hint">Enter your password</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="create_new_account_label">Don\'t have account yet? click here to signup</string>
    <string name="password_outline_hint">Password</string>
    <string name="phone_outline_hint">Phone number</string>
    <string name="sign_up">SignUp</string>
    <string name="have_account_label">Already have an account click here to login.</string>
    <string name="name_hint">Enter your name</string>
    <string name="password_confirm_hint">Enter same password again</string>
    <string name="welcome">Welcome\n To Your \n Personal Dictionary</string>
    <string name="password_confirm_mismatch_error">Oops, your password mismatch!</string>
    <string name="phone_validation_error">Phone number should 11 digit.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_add_vocabulary">Add New Vocabulary</string>
    <string name="word_hint">Write your vocabulary here</string>
    <string name="meaning_hint">Write words meaning here</string>
    <string name="eample_hint">Write an example(optional)</string>
    <string name="description_hint">Write description about this word</string>
    <string name="save">Save</string>
    <string name="meaning">Meaning</string>
    <string name="description">Description</string>
    <string name="example">Example</string>
    <string name="email_hint">Enter your email address</string>
    <string name="email_validation_error">Enter an valid email address.</string>
    <string name="header_login">LOGIN</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="quiz">Quiz</string>
    <string name="add_new">Add</string>
    <string name="vocabulary_list">Vocabulary List</string>
    <string name="undo">Undo</string>
    <string name="synonyms_hint">Synonyms(example: abc, xyz)</string>
    <string name="antonyms_hint">Antonyms(example: abc, xyz)</string>
    <string name="synonyms">Synonyms</string>
    <string name="antonyms">Antonyms</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="delete_warning">Are you sure to delete?</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="profile">Profile</string>
    <string name="favourite_vocab_list">Favourite Vocabulary List</string>
    <string name="header_update_vocabulary">Update Vocabulary</string>
    <string name="show_hide_answer">Show/Hide answer</string>
    <string name="add_additional">Add Additional</string>
    <string name="about_developer">About developer</string>
    <string name="notifications">Notifications</string>
    <string name="daily_word_notification">Daily word notification</string>
    <string name="ringtone">"Notification Ringtone"</string>
    <string name="vibration">Vibration on new notification</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="language_selection">Select your language</string>
    <string name="notification_tone_selection">Select notification Ringtone</string>
    <string name="theme_selection">Select a theme</string>
</resources>
