<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/actionProfile"
            android:icon="@drawable/ic_person_outline_white_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/actionSetting"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/actionRate"
            android:icon="@drawable/ic_star_border_white_24dp"
            android:title="@string/rate_this_app" />
        <item
            android:id="@+id/actionAboutDeveloper"
            android:icon="@drawable/ic_developer_board_white_24dp"
            android:title="@string/about_developer" />
    </group>

    <item
        android:id="@+id/actionLogout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>