<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_favourite"
        android:icon="@drawable/ic_favorite_border"
        app:showAsAction="always"
        android:title="@string/favourite"/>
    <item
        android:id="@+id/delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"/>

    <item
        android:id="@+id/quiz"
        app:showAsAction="always"
        android:icon="@drawable/ic_question_answer"
        android:title="@string/quiz"/>

    <item
        android:id="@+id/app_bar_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"/>

</menu>