<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/vocabularyListFragment"
        android:icon="@drawable/ic_view_list"
        android:title="@string/home"/>
    <item
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/favourite"/>
    <item
        android:id="@+id/addFragment"
        android:enabled="false"
        android:checkable="false"
        android:checked="false"
        android:title="@string/add_new"/>
    <item
        android:id="@+id/quizFragment"
        android:icon="@drawable/ic_question_answer_white_24dp"
        android:title="@string/quiz"/>

    <item
        android:id="@+id/addVocabularyFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/add_new"/>

</menu>