<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jakir.cse24.personaldictionary.view_model.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/matchParent"
        android:background="@color/colorPrimaryDark"
        android:padding="16dp"
        tools:context=".view.activities.RegistrationActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/tilPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/editTextStyle"
                android:drawableStart="@drawable/ic_person_outline"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:text="@={viewModel.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/tilPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                style="@style/editTextStyle"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:text="@={viewModel.phoneNumber}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/editTextStyle"
                android:drawableStart="@drawable/ic_lock_outline"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                style="@style/editTextStyle"
                android:drawableStart="@drawable/ic_lock_outline"
                android:hint="@string/password_confirm_hint"
                android:imeOptions="actionDone"
                android:text="@={viewModel.confirmPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            style="@style/buttonStyle"
            android:text="@string/sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLogin"
            style="@style/defaultTextViewStyle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="2dp"
            android:text="@string/have_account_label"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
