<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jakir.cse24.personaldictionary.view_model.VocabularyAddViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:context=".view.fragments.AddVocabularyFragment">

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/header_add_vocabulary"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilWord"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/word_hint"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etWord"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.word}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMeaning"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/meaning_hint"
                app:layout_constraintTop_toBottomOf="@+id/tilWord">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMeaning"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.meaning}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/spinner_background"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tilMeaning" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/description_hint"
                app:layout_constraintTop_toBottomOf="@+id/spinnerType">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.description}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilExample"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/eample_hint"
                app:layout_constraintTop_toBottomOf="@+id/tilDescription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etExample"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.example}" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:id="@+id/btnSave"
                app:layout_constraintTop_toBottomOf="@id/tilExample"
                android:text="@string/save"
                android:layout_marginTop="25dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="@dimen/button_default_text_size"
                android:background="@color/white"
                android:textAllCaps="true"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
