<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <data>

        <variable
            name="data"
            type="com.jakir.cse24.personaldictionary.data.model.Vocabulary" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        android:padding="@dimen/default_10">

        <TextView
            android:id="@+id/tvWord"
            style="@style/largeTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textview_xx_large_text_size"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@{data.word}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Hello" />

        <TextView
            android:id="@+id/tvWordType"
            style="@style/defaultTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:gravity="center"
            android:text="@{'('+data.type+')'}"
            android:textColor="@color/colorOrangeLight"
            app:layout_constraintTop_toBottomOf="@+id/tvWord" />

        <TextView
            android:id="@+id/tvMeaningLabel"
            style="@style/largeTextViewStyle"
            android:layout_width="match_parent"
            android:textSize="@dimen/textview_x_large_text_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x_large_20"
            android:text="@string/meaning"
            app:layout_constraintTop_toBottomOf="@+id/tvWordType" />

        <TextView
            android:id="@+id/tvMeaning"
            style="@style/defaultTextViewStyle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            tools:text="Meaning of word"
            android:layout_marginTop="@dimen/default_10"
            android:text="@{data.translation.meaning}"
            app:layout_constraintTop_toBottomOf="@+id/tvMeaningLabel" />

        <TextView
            android:id="@+id/tvSynonymsLabel"
            style="@style/largeTextViewStyle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="@dimen/textview_x_large_text_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_10"
            android:text="@string/synonyms"
            app:layout_constraintTop_toBottomOf="@+id/tvMeaning" />

        <TextView
            android:id="@+id/tvSynonyms"
            style="@style/defaultTextViewStyle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            tools:text="Synonyms"
            android:layout_marginTop="@dimen/default_10"
            android:text="@{data.synonyms}"
            app:layout_constraintTop_toBottomOf="@+id/tvSynonymsLabel" />

        <TextView
            android:id="@+id/tvAntonymsLabel"
            style="@style/largeTextViewStyle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="@dimen/textview_x_large_text_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_10"
            android:text="@string/antonyms"
            app:layout_constraintTop_toBottomOf="@+id/tvSynonyms" />

        <TextView
            android:id="@+id/tvAntonyms"
            style="@style/defaultTextViewStyle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            tools:text="Antonyms"
            android:layout_marginTop="@dimen/default_10"
            android:text="@{data.antonyms}"
            app:layout_constraintTop_toBottomOf="@+id/tvAntonymsLabel" />
        <TextView
            android:id="@+id/tvDescriptionLabel"
            style="@style/largeTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textview_x_large_text_size"
            android:layout_marginTop="30dp"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@+id/tvAntonyms" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/defaultTextViewStyle"
            android:layout_width="match_parent"
            tools:text="Word description here"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_10"
            android:text="@{data.translation.description}"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLabel" />

        <TextView
            android:id="@+id/tvExampleLabel"
            style="@style/largeTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textview_x_large_text_size"
            android:layout_marginTop="30dp"
            android:text="@string/example"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <TextView
            android:id="@+id/tvExample"
            style="@style/defaultTextViewStyle"
            android:layout_width="match_parent"
            tools:text="There is an example "
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{data.translation.example}"
            app:layout_constraintTop_toBottomOf="@+id/tvExampleLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>